--- a/roi/configuration.yml
+++ b/roi/configuration.yml
@@ -347,3 +347,9 @@ BC:
   latitude: 54.00
   start: 2022-06-01
   end: 2022-06-08
+
+swedish_fire:
+  longitude: 24.5
+  latitude: 61.5
+  start: 2018-07-14
+  end: 2018-07-24
