--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: lrss
+name: /home/a/a/aadelow/miniforge3/envs/lrss
 channels:
   - conda-forge
 dependencies:
@@ -31,6 +31,7 @@ dependencies:
   - azure-storage-common-cpp=12.5.0=h94269e2_4
   - blosc=1.21.5=hc2324a3_1
   - bokeh=3.4.1=pyhd8ed1ab_0
+  - branca=0.7.2=pyhd8ed1ab_0
   - brotli=1.1.0=hd590300_1
   - brotli-bin=1.1.0=hd590300_1
   - brotli-python=1.1.0=py312h30efb56_1
@@ -69,7 +70,9 @@ dependencies:
   - executing=2.0.1=pyhd8ed1ab_0
   - expat=2.6.2=h59595ed_0
   - fasteners=0.17.3=pyhd8ed1ab_0
+  - fiona=1.9.6=py312h32ad294_3
   - fmt=10.2.1=h00ab1b0_0
+  - folium=0.17.0=pyhd8ed1ab_0
   - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
   - font-ttf-inconsolata=3.000=h77eed37_0
   - font-ttf-source-code-pro=2.038=h77eed37_0
@@ -81,6 +84,9 @@ dependencies:
   - freetype=2.12.1=h267a509_2
   - freexl=2.0.0=h743c826_0
   - frozenlist=1.4.1=py312h98912ed_0
+  - gdal=3.9.0=py312h86af8fa_7
+  - geopandas=0.14.4=pyhd8ed1ab_0
+  - geopandas-base=0.14.4=pyha770c72_0
   - geos=3.12.1=h59595ed_0
   - geotiff=1.7.3=hf7fa9e8_1
   - gettext=0.22.5=h59595ed_2
@@ -95,6 +101,7 @@ dependencies:
   - google-auth=2.30.0=pyhff2d567_0
   - google-auth-httplib2=0.2.0=pyhd8ed1ab_0
   - google-cloud-core=2.4.1=pyhd8ed1ab_0
+  - google-cloud-sdk=480.0.0=py312h7900ff3_0
   - google-cloud-storage=2.17.0=pyhff2d567_0
   - google-crc32c=1.1.2=py312h775cd15_5
   - google-resumable-media=2.7.0=pyhd8ed1ab_0
@@ -113,6 +120,7 @@ dependencies:
   - ipython=8.25.0=pyh707e725_0
   - jedi=0.19.1=pyhd8ed1ab_0
   - jinja2=3.1.4=pyhd8ed1ab_0
+  - joblib=1.4.2=pyhd8ed1ab_0
   - json-c=0.17=h7ab15ed_0
   - kealib=1.5.3=hee9dde6_1
   - keyutils=1.6.1=h166bdaf_0
@@ -182,6 +190,7 @@ dependencies:
   - libre2-11=2023.09.01=h5a48ba9_2
   - librttopo=1.1.0=h8917695_15
   - libsndfile=1.2.2=hc60ed4a_1
+  - libspatialindex=2.0.0=he02047a_0
   - libspatialite=5.1.0=h6fbd9c4_7
   - libsqlite=3.46.0=hde9e2c9_0
   - libssh2=1.11.0=h0841786_0
@@ -203,6 +212,7 @@ dependencies:
   - lz4=4.3.3=py312h03f37cb_0
   - lz4-c=1.9.4=hcb278e6_0
   - lzo=2.10=hd590300_1001
+  - mapclassify=2.6.1=pyhd8ed1ab_0
   - markupsafe=2.1.5=py312h98912ed_0
   - matplotlib=3.8.4=py312h7900ff3_2
   - matplotlib-base=3.8.4=py312h20ab3a6_2
@@ -216,6 +226,7 @@ dependencies:
   - mysql-libs=8.3.0=hca2cd23_4
   - ncurses=6.5=h59595ed_0
   - netcdf4=1.6.5=nompi_py312h39d4375_102
+  - networkx=3.3=pyhd8ed1ab_1
   - nspr=4.35=h27087fc_0
   - nss=3.100=hca3bf56_0
   - numcodecs=0.12.1=py312h7070661_1
@@ -245,6 +256,8 @@ dependencies:
   - proto-plus=1.23.0=pyhd8ed1ab_0
   - protobuf=4.25.3=py312h72fbbdf_0
   - psutil=5.9.8=py312h98912ed_0
+  - psycopg2=2.9.9=py312h08590aa_0
+  - psycopg2-binary=2.9.9=pyhd8ed1ab_0
   - pthread-stubs=0.4=h36c2ea0_1001
   - ptyprocess=0.7.0=pyhd3deb0d_0
   - pulseaudio-client=17.0=hb77b528_0
@@ -279,8 +292,10 @@ dependencies:
   - readline=8.2=h8228510_1
   - rioxarray=0.15.5=pyhd8ed1ab_0
   - rsa=4.9=pyhd8ed1ab_0
+  - rtree=1.2.0=py312h3ed4c40_1
   - s2n=1.4.16=he19d79f_0
   - satpy=0.49.0=pyhd8ed1ab_0
+  - scikit-learn=1.5.0=py312h1fcc3ea_1
   - scipy=1.13.1=py312hc2bc53b_0
   - shapely=2.0.4=py312ha5b4d35_1
   - sip=6.7.12=py312h30efb56_0
@@ -292,6 +307,7 @@ dependencies:
   - sqlite=3.46.0=h6d4b2fc_0
   - stack_data=0.6.2=pyhd8ed1ab_0
   - tblib=3.0.0=pyhd8ed1ab_0
+  - threadpoolctl=3.5.0=pyhc1e730c_0
   - tiledb=2.24.0=h8ea5c1f_0
   - tk=8.6.13=noxft_h4845f30_101
   - toml=0.10.2=pyhd8ed1ab_0
@@ -342,19 +358,26 @@ dependencies:
       - alembic==1.13.1
       - anyio==4.4.0
       - apache-airflow==2.9.2
+      - apache-airflow-providers-amazon==8.24.0
       - apache-airflow-providers-common-io==1.3.2
       - apache-airflow-providers-common-sql==1.14.0
       - apache-airflow-providers-fab==1.1.1
       - apache-airflow-providers-ftp==3.9.1
       - apache-airflow-providers-http==4.11.1
       - apache-airflow-providers-imap==3.6.1
+      - apache-airflow-providers-postgres==5.11.1
       - apache-airflow-providers-smtp==1.7.1
       - apache-airflow-providers-sqlite==3.8.1
       - apispec==6.6.1
       - argcomplete==3.3.0
       - asgiref==3.8.1
+      - asn1crypto==1.5.1
       - babel==2.15.0
+      - beautifulsoup4==4.12.3
+      - billiard==4.2.0
       - blinker==1.8.2
+      - boto3==1.34.130
+      - botocore==1.34.130
       - cachelib==0.9.0
       - clickclick==20.10.2
       - colorlog==4.8.0
@@ -391,12 +414,14 @@ dependencies:
       - inflection==0.5.1
       - itsdangerous==2.2.0
       - jmespath==0.10.0
+      - jsonpath-ng==1.6.1
       - jsonschema==4.22.0
       - jsonschema-specifications==2023.12.1
       - lazy-object-proxy==1.10.0
       - limits==3.12.0
       - linkify-it-py==2.0.3
       - lockfile==0.12.2
+      - lxml==5.2.2
       - mako==1.3.5
       - markdown-it-py==3.0.0
       - marshmallow==3.21.3
@@ -419,11 +444,13 @@ dependencies:
       - pendulum==3.0.0
       - pluggy==1.5.0
       - prison==0.2.1
+      - pyathena==3.8.3
       - pyjwt==2.8.0
       - python-daemon==3.0.1
       - python-dateutil==2.9.0.post0
       - python-nvd3==0.16.0
       - python-slugify==8.0.4
+      - redshift-connector==2.1.2
       - referencing==0.31.1
       - requests==2.31.0
       - requests-toolbelt==1.0.0
@@ -432,12 +459,16 @@ dependencies:
       - rich==13.7.1
       - rich-argparse==1.5.0
       - rpds-py==0.18.1
+      - s3transfer==0.10.1
+      - scramp==1.4.5
       - setproctitle==1.3.3
       - setuptools==66.1.1
       - simple-file-checksum==1.2.2
       - sniffio==1.3.1
+      - soupsieve==2.5
       - sqlalchemy==1.4.52
       - sqlalchemy-jsonfield==1.0.2
+      - sqlalchemy-redshift==0.8.14
       - sqlalchemy-utils==0.41.2
       - sqlparse==0.5.0
       - tabulate==0.9.0
@@ -449,8 +480,9 @@ dependencies:
       - uc-micro-py==1.0.3
       - unicodecsv==0.14.1
       - universal-pathlib==0.2.2
+      - watchtower==3.2.0
       - werkzeug==2.2.3
       - wirerope==0.4.7
       - wrapt==1.16.0
       - wtforms==3.1.2
-prefix: /home/anton/miniforge3/envs/lrss
+prefix: /home/a/a/aadelow/miniforge3/envs/lrss
